--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240227230027">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240228001009">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -683,7 +683,7 @@
 							<div class="production__text">
 								<p><strong>Гра вже на нашому складі!</strong> </p>
 								<p>Триває швидке передзамовлення! </p>
-								<p>Усі передзамовлення будуть розіслані з 8-го березня! </p>
+								<p>Усі передзамовлення будуть розіслані з <strong>8-го березня!</strong> </p>
 								<p>
 									Надсилання передзамовлень відбуватиметься Новою Поштою / УкрПоштою / точки видачі Розетка <span>коштом отримувача!</span> Проте,
 									при замовленні товарів сумою понад 1999 грн, доставка відбуватиметься <span>нашим коштом!</span>
@@ -691,7 +691,7 @@
 								<p>Можливий <span>самовивіз</span> в Одесі (вул. Новосельского, 100 або вул. Садова, 9)</p>
 							</div>
 							<div class="production__description">
-								Передзамовлення <span>зі знижкою 20%</span> триватиме <span>до 5-го березня включно</span> Отже, встигніть придбати класику зі
+								Передзамовлення <span>зі знижкою 20%</span> триватиме <strong>до 8-го березня включно</strong> Отже, встигніть придбати класику зі
 								світу настільних ігор за найвигіднішою ціною! 
 								<button data-goto=".item-preorder--2" type="submit" class="button button--red-decor production__button">
 									<span>Замовити</span>
@@ -905,7 +905,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240227230027"></script>
+	<script src="js/app.min.js?_v=20240228001009"></script>
 </body>
 
 </html>
